force-app/main/default/objects/cgcloud__Product_Assortment_Product_Share__c/cgcloud__Product_Assortment_Product_Share__c.object-meta.xml
<CustomObject>
    <description>This object holds the details of categories assigned to a product assortment.</description>
    <label>Product Assortment Category</label>
    <nameField>
        <displayFormat>PAPS-{0000}</displayFormat>
        <label>Product Assortment Product Share Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Assortment Product Shares</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>