force-app/main/default/objects/cgcloud__Product_Assortment_Product_Share__c/fields/cgcloud__Product_Assortment__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Assortment__c</fullName>
    <description>Assortment to which the categories are assigned.</description>
    <label>Product Assortment</label>
    <referenceTo>Assortment</referenceTo>
    <relationshipLabel>Product Assortment Categories</relationshipLabel>
    <relationshipName>Product_Assortment_Product_Shares</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>