force-app/main/default/objects/cgcloud__Product_Assortment_Product_Share__c/fields/cgcloud__Product_Description_1__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Description_1__c</fullName>
    <description>Associated Product Description.</description>
    <formula>cgcloud__Product__r.cgcloud__Description_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Associated Product Description.</label>
    <type>Text</type>
</CustomField>