force-app/main/default/objects/cgcloud__Product_Assortment_Product_Share__c/validationRules/cgcloud__Check_If_Product_Is_Category.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_If_Product_Is_Category</fullName>
    <active>true</active>
    <description>This validation rule check if the &quot;Product Level&quot; of the Product is &quot;Category&quot;</description>
    <errorConditionFormula>NOT(ISPICKVAL(cgcloud__Product__r.cgcloud__Product_Level__c, &apos;Category&apos;))</errorConditionFormula>
    <errorMessage>Only Products with &apos;Category&apos; Product Level can be selected.</errorMessage>
</ValidationRule>