force-app/main/default/objects/cgcloud__Product_Assortment_Product_Share__c/validationRules/cgcloud__Check_Product_Sales_Org.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_Product_Sales_Org</fullName>
    <active>true</active>
    <description>This validation rule check if the Product Sales Org is equals to Product Assortment Sales Org</description>
    <errorConditionFormula>TEXT(cgcloud__Product__r.cgcloud__Product_Template__r.cgcloud__Sales_Org__c) != TEXT( cgcloud__Product_Assortment__r.cgcloud__Product_Assortment_Template__r.cgcloud__Sales_Org__c )</errorConditionFormula>
    <errorMessage>The category must belong to the same Sales Org of Product Assortment</errorMessage>
</ValidationRule>